--- a/1 - Product Preview Card Component/index.css
+++ b/1 - Product Preview Card Component/index.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@400;500;700&display=swap");
+
+
 :root {
     --clr-bg: hsl(30, 38%, 92%);
     --clr-white: hsl(0, 0%, 100%);
