--- a/1 - Product Preview Card Component/index.css
+++ b/1 - Product Preview Card Component/index.css
@@ -123,6 +123,7 @@ img {
     background-color: var(--clr-dark-cyan);
     border-radius: 10px;
     transition: background-color 500ms;
+    cursor: pointer;
 }
 
 .btn:hover,
