--- a/braillerap/style.css
+++ b/braillerap/style.css
@@ -1,15 +1,3 @@
-/* Styles go here */
-a, a:visited, a:active {
-}
-
-a, p, h1 {
-    font-family: Helvetica;
-}
-
-p {
-    font-size: 14px;
-}
-
 body {
 	position: absolute;
 	top: 0;
@@ -21,11 +9,17 @@ body {
     margin-top: 5px;
 }
 
+a, p, h1 {
+    font-family: Helvetica;
+}
+
+p {
+    font-size: 1rem;
+}
+
 #paperCanvas {
-	display: inline-block;
 	width: 50%;
 	min-height: 800px;
-	float: left;
 }
 
 #gcode-container{
@@ -45,12 +39,13 @@ body {
     width: 100%;
     min-height: 350px;	
     display: flex;
+    flex-direction: row;
+    column-gap: 1rem;
 }
 
 #latin {
     width: 100%;
     min-height: 350px;
-    margin-right: 10px;
 }
 #gcode{
     width: 100%;
